# Network_System_C

./: README.md
Client/src/: main.c
Commune/: CMakeLists.txt
Commune/headers/: Carte.h  Client.h  Joueurs.h  Robot.h  inclusions.h
Commune/src/: Joueurs.c  Robot.c
Serveur/: Serveur  script.sh
Serveur/Stats/: Historique_Chat_A  Historiques  stats_globales.txt
Serveur/headers/: Jouer.h  serveur.h
Serveur/src/: Jouer.c  main.c
